# Img-filter

./: CMakeLists.txt  README.md
include/: bandpass.h  convolution.h  filter.h  gauss.h  highpass.h  identity.h  image.h  laplace.h  lowpass.h  test.h  userInterface.h
src/: bandpass.cpp  convolution.cpp  gauss.cpp  highpass.cpp  identity.cpp  image.cpp  laplace.cpp  lowpass.cpp  main.cpp  test.cpp  userInterface.cpp
